--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/flutter-logo.png
+    - assets/sigma_10.png
+    - assets/rain.jpg
+    - assets/fon.jpg
+    - assets/diamond.png
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
